Modifiquei com Bootstrap

--- a/Exercícios/HTML-20-02-20/assets/css/estilo2.css
+++ b/Exercícios/HTML-20-02-20/assets/css/estilo2.css
@@ -26,7 +26,7 @@ nav{
 }
 main{
     width: 100%;
-    height: 700px;
+    height: 70em;
     background-color: rgba(128, 128, 128, 0.89);
     /* display: grid;
     justify-content: center; */
@@ -34,7 +34,7 @@ main{
 footer{
     width: 100%;
     height: 200px;
-    background-color: black;
+    background-color: #000000d6;
 }
 img{
     width: 100%;
@@ -42,9 +42,8 @@ img{
 }
 a{
     text-decoration: none;
-    color: white;
-    font-size: 32px;
-    font-family: monospace;
+    color: white !important;
+    font-size: 23px;
 }
 section{
     text-align: center;
@@ -64,6 +63,10 @@ section{
     padding: 2%;
     background-color: #000000bf;
 }
+.card{
+    margin: 7% 4% 4% 6%;
+    float: left;
+}
 #star-wars{
     margin: 0 auto;
     width: 128px;
@@ -73,8 +76,9 @@ section{
     clear: both;
 }
 #image{
-    width: 30px;
-    height: 30px;
+    height: 65px;
+    display: flex;
+    justify-content: center;
 }
 #menu{
     list-style: none;
